added basic HTML page structure. Added the layout reference image as background-image.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
   <title>Codo a Codo 4.0</title>
 </head>
 <body>
-  <h1>CODO a CODO 4.0</h1>
+  <header>
+    <div>
+      <a href="/">ICONO - Conf Bs As</a>
+    </div>
+    <nav>
+      <a href="/conferencia">La conferencia</a> <!-- Apunta al hero -->
+      <a href="/oradores">Los oradores</a> <!-- Apunta a oradores -->
+      <a href="/lugar">El lugar y la fecha</a> <!-- Apunta a destino -->
+      <a href="/unete">Conviértete en orador</a> <!-- Apunta al formulario -->
+      <a href="/comprar" target="_blank">Compra tickets</a>
+    </nav>
+  </header>
+
+  <main>
+    <section id="hero-section">Hero Carousel</section>
+    <section id="oradores-section">Oradores</section>
+    <section id="destinos-section">Destinos</section>
+    <section id="form-section">Unete</section>
+  </main>
+
+  <footer>
+    <nav>
+      <a href="/faq" target="_blank">Preguntas frecuentes</a>
+      <a href="/contactanos" target="_blank">Contáctanos</a>
+      <a href="/info/prensa" target="_blank">Prensa</a>
+      <a href="/conferencias" target="_blank">Conferencias</a>
+      <a href="/faq/terminos_y_condiciones" target="_blank">Términos y condiciones</a>
+      <a href="/privacidad" target="_blank">Privacidad</a>
+      <a href="/info/estudiantes" target="_blank">Estudiantes</a>
+    </nav>
+  </footer>
 </body>
 </html>
