added basic styles to the main header. Added custom favicon and font-family.

--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter">
   <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
   <title>Codo a Codo 4.0</title>
 </head>
 <body>
-  <header>
-    <div>
-      <a href="/">ICONO - Conf Bs As</a>
+  <header id="main-header">
+    <div id="header-logo">
+      <a href="/">
+        <img id="header-img" src="./assets/images/codoacodo.png" alt="cac_logo">
+      </a>
+      <span>Conf Bs As</span>
     </div>
-    <nav>
-      <a href="/conferencia">La conferencia</a> <!-- Apunta al hero -->
-      <a href="/oradores">Los oradores</a> <!-- Apunta a oradores -->
-      <a href="/lugar">El lugar y la fecha</a> <!-- Apunta a destino -->
-      <a href="/unete">Conviértete en orador</a> <!-- Apunta al formulario -->
-      <a href="/comprar" target="_blank">Compra tickets</a>
+    <nav id="header-navbar">
+      <a class="header-links" href="/conferencia">La conferencia</a> <!-- Apunta al hero -->
+      <a class="header-links" href="/oradores">Los oradores</a> <!-- Apunta a oradores -->
+      <a class="header-links" href="/lugar">El lugar y la fecha</a> <!-- Apunta a destino -->
+      <a class="header-links" href="/unete">Conviértete en orador</a> <!-- Apunta al formulario -->
+      <a class="header-links" href="/comprar" target="_blank">Comprar tickets</a>
     </nav>
   </header>
 
