Added basic styles to footer. Added styles to all sections to easily identify them during development.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </main>
 
   <footer>
-    <nav>
+    <nav id="footer-nav">
       <a href="/faq" target="_blank">Preguntas frecuentes</a>
       <a href="/contactanos" target="_blank">Contáctanos</a>
       <a href="/info/prensa" target="_blank">Prensa</a>
