Added styles to the hero's article. Added general buttons styles and utility classes.

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         <h2>Conf BS As</h2>
         <p>Bs As llega por primera vez a Argentina. un evento para compartir con nuestra comunidad el conocimiento y experiencia de los experto que están creando el futuro de Internet. Ven a conocer a miembros del evente, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!
         </p>
-        <div>
+        <nav>
           <button>Quiero ser orador</button>
-          <button>Comprar tickets</button>
-        </div>
+          <button class="btn-green">Comprar tickets</button>
+        </nav>
       </article>
-      <div>Hero Carousel -Background images only-</div>
+      <div id="hero-carousel">Hero Carousel -Background images only-</div>
     </section>
 
     <section id="oradores-section">
