--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter">
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
@@ -32,7 +33,7 @@
 
     <section id="hero-section">
       <article>
-        <h2>Conf BS As</h2>
+        <h2>Conf Bs As</h2>
         <p>Bs As llega por primera vez a Argentina. un evento para compartir con nuestra comunidad el conocimiento y experiencia de los experto que están creando el futuro de Internet. Ven a conocer a miembros del evente, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!
         </p>
         <nav>
@@ -40,7 +41,21 @@
           <button class="btn-green">Comprar tickets</button>
         </nav>
       </article>
-      <div id="hero-carousel">Hero Carousel -Background images only-</div>
+      <div id="hero-carousel">
+        <div class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./assets/images/ba1.jpg" class="d-block w-100" alt="buenos-aires-img1">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/images/ba2.jpg" class="d-block w-100" alt="buenos-aires-img2">
+            </div>
+            <div class="carousel-item">
+              <img src="./assets/images/ba3.jpg" class="d-block w-100" alt="buenos-aires-img3">
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section id="oradores-section">
