--- a/index.html
+++ b/index.html
@@ -58,27 +58,57 @@
       </div>
     </section>
 
-    <section id="oradores-section">
-      <div> <!-- section title -->
+    <section id="cards-section">
+      <div id="cards-section-title"> <!-- section title -->
         <span>conoce a los</span>
         <h2>oradores</h2>
       </div>
-      <div> <!-- cards container -->
+      <div id="cards-container"> <!-- cards container -->
 
-        <div>  <!-- card ↓↓ -->
-          <img src="/" alt="card_img">
-          <div>
+        <div class="card">
+          <img class="card-image" src="./assets/images/steve.jpg" alt="steve_img">
+          <div class="card-content">
             <header>
               <div>
-                <span>JavaScript</span>
-                <span>React</span>
+                <span class="card-badge badge-yellow">JavaScript</span>
+                <span class="card-badge badge-blue">React</span>
               </div>
-              <h4>Steve Jobs</h4>
+              <h4 class="card-name">Steve Jobs</h4>
             </header>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis architecto harum commodi natus officiis similique quisquam qui deleniti eligendi adipisci ex, repellendus molestias aperiam quod autem expedita maiores totam? Architecto.
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis architecto harum commodi natus officiis similique quisquam qui deleniti eligendi adipisci ex, repellendus molestias aperiam quod autem expedita maiores totam? Architecto.
             </p>
           </div>
-        </div> <!-- card ↑↑ -->
+        </div>
+
+        <div class="card">
+          <img class="card-image" src="./assets/images/bill.jpg" alt="bill_img">
+          <div class="card-content">
+            <header>
+              <div>
+                <span class="card-badge badge-yellow">JavaScript</span>
+                <span class="card-badge badge-blue">React</span>
+              </div>
+              <h4 class="card-name">Bill Gates</h4>
+            </header>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis architecto harum commodi natus officiis similique quisquam qui deleniti eligendi adipisci ex, repellendus molestias aperiam quod autem expedita maiores totam? Architecto.
+            </p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card-image" src="./assets/images/ada.jpg" alt="ada_img">
+          <div class="card-content">
+            <header>
+              <div>
+                <span class="card-badge badge-grey">Negocios</span>
+                <span class="card-badge badge-red">Startups</span>
+              </div>
+              <h4 class="card-name">Ada Lovelace</h4>
+            </header>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis architecto harum commodi natus officiis similique quisquam qui deleniti eligendi adipisci ex, repellendus molestias aperiam quod autem expedita maiores totam? Architecto.
+            </p>
+          </div>
+        </div>
 
       </div>
     </section>
