Added styles to Destino section.

--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
     </section>
 
     <section id="destinos-section">
-      <img src="/" alt="city_img">
+      <figure>
+        <img id="destino-img" src="./assets/images/honolulu.jpg" alt="honolulu_img">
+      </figure>
       <article>
-        <h2>BS As - Octubre</h2>
+        <h2>Bs As - Octubre</h2>
         <p>Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condade de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superficie).
         </p>
         <button>Conocé más</button>
