--- a/index.html
+++ b/index.html
@@ -21,12 +21,31 @@
       <span>Conf Bs As</span>
     </div>
     <nav id="header-navbar">
-      <a class="header-links" href="/conferencia">La conferencia</a> <!-- Apunta al hero -->
-      <a class="header-links" href="/oradores">Los oradores</a> <!-- Apunta a oradores -->
-      <a class="header-links" href="/lugar">El lugar y la fecha</a> <!-- Apunta a destino -->
-      <a class="header-links" href="/unete">Conviértete en orador</a> <!-- Apunta al formulario -->
+      <a class="header-links" href="/conferencia">La conferencia</a>
+      <a class="header-links" href="/oradores">Los oradores</a>
+      <a class="header-links" href="/lugar">El lugar y la fecha</a>
+      <a class="header-links" href="/unete">Conviértete en orador</a>
       <a class="header-links" href="/comprar" target="_blank">Comprar tickets</a>
     </nav>
+
+    <!-- Dropdown navbar -->
+    <div id="header-dropdown" class="dropdown">
+      <button id="dropdown-button" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <svg id="menu-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+          <path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/>
+        </svg>
+        <svg id="xmark-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+          <path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/>
+        </svg>
+      </button>
+      <ul id="dropdown-navbar" class="dropdown-menu">
+        <a class="dropdown-item header-links" href="/conferencia">La conferencia</a>
+        <a class="dropdown-item header-links" href="/oradores">Los oradores</a>
+        <a class="dropdown-item header-links" href="/lugar">El lugar y la fecha</a>
+        <a class="dropdown-item header-links" href="/unete">Conviértete en orador</a>
+        <a class="dropdown-item header-links" href="/comprar" target="_blank">Comprar tickets</a>
+      </ul>
+    </div>
   </header>
 
   <main>
@@ -44,13 +63,13 @@
         <div class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./assets/images/ba1.jpg" class="d-block w-100" alt="buenos-aires-img1">
+              <img src="./assets/images/ba1.jpg" class="carousel-image" alt="buenos-aires-img1">
             </div>
             <div class="carousel-item">
-              <img src="./assets/images/ba2.jpg" class="d-block w-100" alt="buenos-aires-img2">
+              <img src="./assets/images/ba2.jpg" class="carousel-image" alt="buenos-aires-img2">
             </div>
             <div class="carousel-item">
-              <img src="./assets/images/ba3.jpg" class="d-block w-100" alt="buenos-aires-img3">
+              <img src="./assets/images/ba3.jpg" class="carousel-image" alt="buenos-aires-img3">
             </div>
           </div>
         </div>
