Added navigation functionality to the header's links.

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <span>Conf Bs As</span>
     </div>
     <nav id="header-navbar">
-      <a class="header-links" href="/conferencia">La conferencia</a>
-      <a class="header-links" href="/oradores">Los oradores</a>
-      <a class="header-links" href="/lugar">El lugar y la fecha</a>
-      <a class="header-links" href="/unete">Conviértete en orador</a>
-      <a class="header-links" href="/comprar" target="_blank">Comprar tickets</a>
+      <a class="header-links" href="#hero-section">La conferencia</a>
+      <a class="header-links" href="#cards-section">Los oradores</a>
+      <a class="header-links" href="#destinos-section">El lugar y la fecha</a>
+      <a class="header-links" href="#form-section">Conviértete en orador</a>
+      <a class="header-links" href="/" target="_blank">Comprar tickets</a>
     </nav>
 
     <!-- Dropdown navbar -->
@@ -39,11 +39,11 @@
         </svg>
       </button>
       <ul id="dropdown-navbar" class="dropdown-menu">
-        <a class="dropdown-item header-links" href="/conferencia">La conferencia</a>
-        <a class="dropdown-item header-links" href="/oradores">Los oradores</a>
-        <a class="dropdown-item header-links" href="/lugar">El lugar y la fecha</a>
-        <a class="dropdown-item header-links" href="/unete">Conviértete en orador</a>
-        <a class="dropdown-item header-links" href="/comprar" target="_blank">Comprar tickets</a>
+        <a class="dropdown-item header-links" href="#hero-section">La conferencia</a>
+        <a class="dropdown-item header-links" href="#cards-section">Los oradores</a>
+        <a class="dropdown-item header-links" href="#destinos-section">El lugar y la fecha</a>
+        <a class="dropdown-item header-links" href="#form-section">Conviértete en orador</a>
+        <a class="dropdown-item header-links" href="/" target="_blank">Comprar tickets</a>
       </ul>
     </div>
   </header>
@@ -55,7 +55,7 @@
         <p>Bs As llega por primera vez a Argentina. un evento para compartir con nuestra comunidad el conocimiento y experiencia de los experto que están creando el futuro de Internet. Ven a conocer a miembros del evente, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!
         </p>
         <nav>
-          <button>Quiero ser orador</button>
+          <a href="#form-section">Quiero ser orador</a>
           <button class="btn-green">Comprar tickets</button>
         </nav>
       </article>
@@ -167,13 +167,13 @@
 
   <footer>
     <nav id="footer-nav">
-      <a href="/faq" target="_blank">Preguntas frecuentes</a>
-      <a href="/contactanos" target="_blank">Contáctanos</a>
-      <a href="/info/prensa" target="_blank">Prensa</a>
-      <a href="/conferencias" target="_blank">Conferencias</a>
-      <a href="/faq/terminos_y_condiciones" target="_blank">Términos y condiciones</a>
-      <a href="/privacidad" target="_blank">Privacidad</a>
-      <a href="/info/estudiantes" target="_blank">Estudiantes</a>
+      <a href="/">Preguntas frecuentes</a>
+      <a href="/">Contáctanos</a>
+      <a href="/">Prensa</a>
+      <a href="/">Conferencias</a>
+      <a href="/">Términos y condiciones</a>
+      <a href="/">Privacidad</a>
+      <a href="/">Estudiantes</a>
     </nav>
   </footer>
 </body>
