Added link to Ticketek Argentina to 'Comprar ticket' anchors and buttons.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a class="header-links" href="#cards-section">Los oradores</a>
       <a class="header-links" href="#destinos-section">El lugar y la fecha</a>
       <a class="header-links" href="#form-section">Conviértete en orador</a>
-      <a class="header-links" href="/" target="_blank">Comprar tickets</a>
+      <a class="header-links" href="https://www.ticketek.com.ar/especiales" target="_blank">Comprar tickets</a>
     </nav>
 
     <!-- Dropdown navbar -->
@@ -43,7 +43,7 @@
         <a class="dropdown-item header-links" href="#cards-section">Los oradores</a>
         <a class="dropdown-item header-links" href="#destinos-section">El lugar y la fecha</a>
         <a class="dropdown-item header-links" href="#form-section">Conviértete en orador</a>
-        <a class="dropdown-item header-links" href="/" target="_blank">Comprar tickets</a>
+        <a class="dropdown-item header-links" href="https://www.ticketek.com.ar/especiales" target="_blank">Comprar tickets</a>
       </ul>
     </div>
   </header>
