Added on-hover animation to buttons and links.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <p>Bs As llega por primera vez a Argentina. un evento para compartir con nuestra comunidad el conocimiento y experiencia de los experto que están creando el futuro de Internet. Ven a conocer a miembros del evente, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!
         </p>
         <nav>
-          <a href="#form-section">Quiero ser orador</a>
-          <button class="btn-green">Comprar tickets</button>
+          <a class="anchor-btn" href="#form-section">Quiero ser orador</a>
+          <a class="anchor-btn btn-green" href="https://www.ticketek.com.ar/especiales" target="_blank">Comprar tickets</a>
         </nav>
       </article>
       <div id="hero-carousel">
@@ -137,7 +137,7 @@
         <h2>Bs As - Octubre</h2>
         <p>Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condade de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superficie).
         </p>
-        <button>Conocé más</button>
+        <a class="anchor-btn" href="https://www.eventbrite.com/" target="_blank">Conocé más</a>
       </article>
     </section>
 
