--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       <a class="header-links" href="https://www.ticketek.com.ar/especiales" target="_blank">Comprar tickets</a>
     </nav>
 
-    <!-- Dropdown navbar -->
     <div id="header-dropdown" class="dropdown">
       <button id="dropdown-button" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
         <svg id="menu-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
@@ -131,7 +130,30 @@
 
     <section id="destinos-section">
       <figure>
-        <img id="destino-img" src="./assets/images/honolulu.jpg" alt="honolulu_img">
+        <div id="carousel-container" class="carousel slide">
+          <div class="carousel-inner h-100">
+            <div class="carousel-item active">
+              <img class="destino-img" src="./assets/images/honolulu.jpg" alt="honolulu_img">
+            </div>
+            <div class="carousel-item">
+              <img class="destino-img" src="./assets/images/hawaii.jpg" alt="hawaii_img">
+            </div>
+            <div class="carousel-item">
+              <img class="destino-img" src="./assets/images/hawaii2.jpg" alt="hawaii2_img">
+            </div>
+            <div class="carousel-item">
+              <img class="destino-img" src="./assets/images/hawaii3.jpg" alt="hawaii3_img">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carousel-container" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carousel-container" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
       </figure>
       <article>
         <h2>Bs As - Octubre</h2>
