--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
               <img class="destino-img" src="./assets/images/hawaii3.jpg" alt="hawaii3_img">
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carousel-container" data-bs-slide="prev">
+          <button class="carousel-btn carousel-control-prev" type="button" data-bs-target="#carousel-container" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carousel-container" data-bs-slide="next">
+          <button class="carousel-btn carousel-control-next" type="button" data-bs-target="#carousel-container" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
