--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
         </nav>
       </article>
       <div id="hero-carousel">
-        <div class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
+        <div class="carousel slide h-100" data-bs-ride="carousel">
+          <div class="carousel-inner h-100">
             <div class="carousel-item active">
-              <img src="./assets/images/ba1.jpg" class="carousel-image" alt="buenos-aires-img1">
+              <img src="./assets/images/ba1.jpg" class="carousel-image w-100" alt="buenos-aires-img1">
             </div>
             <div class="carousel-item">
-              <img src="./assets/images/ba2.jpg" class="carousel-image" alt="buenos-aires-img2">
+              <img src="./assets/images/ba2.jpg" class="carousel-image w-100" alt="buenos-aires-img2">
             </div>
             <div class="carousel-item">
-              <img src="./assets/images/ba3.jpg" class="carousel-image" alt="buenos-aires-img3">
+              <img src="./assets/images/ba3.jpg" class="carousel-image w-100" alt="buenos-aires-img3">
             </div>
           </div>
         </div>
@@ -189,13 +189,13 @@
 
   <footer>
     <nav id="footer-nav">
-      <a href="/">Preguntas frecuentes</a>
-      <a href="/">Contáctanos</a>
-      <a href="/">Prensa</a>
-      <a href="/">Conferencias</a>
-      <a href="/">Términos y condiciones</a>
-      <a href="/">Privacidad</a>
-      <a href="/">Estudiantes</a>
+      <a href="#" target="_blank">Preguntas frecuentes</a>
+      <a href="#" target="_blank">Contáctanos</a>
+      <a href="#" target="_blank">Prensa</a>
+      <a href="#" target="_blank">Conferencias</a>
+      <a href="#" target="_blank">Términos y condiciones</a>
+      <a href="#" target="_blank">Privacidad</a>
+      <a href="#" target="_blank">Estudiantes</a>
     </nav>
   </footer>
 </body>
