Added a script to prevent the form on-submit default behavior.

--- a/index.html
+++ b/index.html
@@ -199,4 +199,7 @@
     </nav>
   </footer>
 </body>
+<script>
+  document.getElementById("form-section").addEventListener("submit", (e) => {e.preventDefault()})
+</script>
 </html>
