--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header id="main-header">
     <div id="header-logo">
-      <a href="/">
+      <a href="#">
         <img id="header-img" src="./assets/images/codoacodo.png" alt="cac_logo">
       </a>
       <span>Conf Bs As</span>
