Fixed Carousel display on large resolutions. Added basic styling to Purchase-Ticket page.

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             ></textarea>
           </label>
           <span>Recuerda incluir un título para tu charla</span>
-          <input id="btn-submit" type="submit" value="Enviar" />
+          <input class="btn-submit" type="submit" value="Enviar" />
         </form>
       </section>
     </main>
