Refactored Ticket-page logic, spliting the different layout components initization into 2 distinct functions.

--- a/ticket-purchase.html
+++ b/ticket-purchase.html
@@ -29,13 +29,6 @@
   <body>
     <header id="main-header">
       <div id="header-logo">
-        <!-- <a href="#">
-          <img
-            id="header-img"
-            src="./assets/images/codoacodo.png"
-            alt="cac_logo"
-          />
-        </a> -->
         <span>Conf Bs As</span>
       </div>
       <nav id="header-navbar">
@@ -218,6 +211,6 @@
         <a href="#" target="_blank"><span>Estudiantes</span></a>
       </nav>
     </footer>
-    <script src="./app/ticket-purchase.js" type="module"></script>
+    <script src="./app/ticket-page/ticket-purchase.js" type="module"></script>
   </body>
 </html>
