Fixed display issues displaying validation and errors during form resets and submitions.

--- a/ticket-purchase.html
+++ b/ticket-purchase.html
@@ -241,7 +241,9 @@
             </div>
           </div>
           <div id="submit-btn-container">
-            <button id="reset-btn" class="btn-submit">Borrar</button>
+            <button id="reset-btn" class="btn-submit" type="reset">
+              Borrar
+            </button>
             <button id="resumen-btn" class="btn-submit">Resumen</button>
           </div>
         </form>
